[gd_scene load_steps=25 format=3 uid="uid://c50gxclw2vawf"]

[ext_resource type="Script" uid="uid://dbb5k5pmxl1m" path="res://characters/player/player.gd" id="1_gu78s"]
[ext_resource type="Shader" uid="uid://btgap2n4ro8ye" path="res://views/damage_taken.tres" id="1_qxqmn"]
[ext_resource type="PackedScene" uid="uid://c1g6c6bf2rtfe" path="res://views/player_hud/player_hud.tscn" id="2_wm45i"]
[ext_resource type="AudioStream" uid="uid://kdaumpa4un3b" path="res://assets/audio/sound_effects/Death.wav" id="3_0bchg"]
[ext_resource type="Texture2D" uid="uid://dcqacyqjpo4b4" path="res://assets/art/entities/shopping_player.png" id="3_2q8vt"]
[ext_resource type="AudioStream" uid="uid://dupqd1jbjroff" path="res://assets/audio/sound_effects/Player_Hurt.wav" id="4_ehqib"]
[ext_resource type="PackedScene" uid="uid://caera8evwn5y3" path="res://characters/player/inventory/inventory.tscn" id="6_y75rb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jl7ft"]
shader = ExtResource("1_qxqmn")
shader_parameter/DamageTaken = false

[sub_resource type="AtlasTexture" id="AtlasTexture_ho52k"]
atlas = ExtResource("3_2q8vt")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnyl8"]
atlas = ExtResource("3_2q8vt")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2iy7"]
atlas = ExtResource("3_2q8vt")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3c11"]
atlas = ExtResource("3_2q8vt")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iy2f2"]
atlas = ExtResource("3_2q8vt")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_krxym"]
atlas = ExtResource("3_2q8vt")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4dmi"]
atlas = ExtResource("3_2q8vt")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_51n7t"]
atlas = ExtResource("3_2q8vt")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsxlc"]
atlas = ExtResource("3_2q8vt")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mg0qi"]
atlas = ExtResource("3_2q8vt")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kvvx"]
atlas = ExtResource("3_2q8vt")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qht2a"]
atlas = ExtResource("3_2q8vt")
region = Rect2(64, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_86jys"]
atlas = ExtResource("3_2q8vt")
region = Rect2(80, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4m51"]
atlas = ExtResource("3_2q8vt")
region = Rect2(96, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_aavnv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho52k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnyl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2iy7")
}],
"loop": false,
"name": &"Die",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3c11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iy2f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krxym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4dmi")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_51n7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsxlc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mg0qi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kvvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qht2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86jys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4m51")
}],
"loop": true,
"name": &"Run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2ioo"]
size = Vector2(13, 16)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 53
script = ExtResource("1_gu78s")
player_hud_scene = ExtResource("2_wm45i")
death_sound = ExtResource("3_0bchg")
hurt_sound = ExtResource("4_ehqib")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_jl7ft")
sprite_frames = SubResource("SpriteFrames_aavnv")
animation = &"Die"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_p2ioo")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="Inventory" parent="." instance=ExtResource("6_y75rb")]

[node name="PlayerHud" parent="." instance=ExtResource("2_wm45i")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="DamageIndicationTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="DamageIndicationTimer" to="." method="_on_damage_indication_timer_timeout"]
